# src/db/controllers/driversController.js
@@ -2,7 +2,7 @@ const Drivers = require('../models/driversModels');
 
 const createDriver = (req, res) => {
   const body = req.body
-  const newDriver = new Driver(body)
+  const newDriver = new Drivers(body)
   newDriver.save()
     .then(driver => {
       res.status(201).json(driver);
@@ -15,7 +15,7 @@ const createDriver = (req, res) => {
 };
 
 const getAllDriver = (req, res) => {
-  Drivers.findOne()
+  Drivers.find()
     .then(drivers => {
       res.status(200).json(drivers);
     })
